--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@
       </div>
     </div>
   </div>
+      <div class="tiles">
+      <div class="tile">
+        <div class="tile-image"></div>
+        <div class="tile-content">
+          <h4>ČSO: Sněmovna hlasuje o zákoně 114</h4>
+          <p>Mobilizační kampaň ČSO proti návrhům degradujícím funkci národních parků</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script>
     function toggleSection(id) {
