--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
         </div>
       </div>
     </div>
-  </div>
+  
       <div class="tiles">
       <div class="tile">
         <div class="tile-image"></div>
         <div class="tile-content">
           <h4>ČSO: Sněmovna hlasuje o zákoně 114</h4>
-          <p>Mobilizační kampaň ČSO proti návrhům degradujícím funkci národních parků</p>
+          <p>Mobilizační kampaň ornitologické společnosti proti návrhům degradujícím funkci národních parků</p>
         </div>
       </div>
     </div>
