--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       margin-bottom: 2rem;
     }
 
+    h3 {
+      font-size: 0.5rem;
+      font-weight: normal;
+      margin-top: 0;
+      margin-bottom: 2rem;
+    }    
+
     .section {
       border-top: 1px solid #ddd;
       padding: 1rem 0;
@@ -146,13 +153,27 @@
         </div>
       </div>
     </div>
+
+     <div class="tiles">
+      <div class="tile">
+        <div class="tile-image"></div>
+        <div class="tile-content">
+          <h4>ČSO: Havrani v Brně</h4>
+          <p>Upozor</p>
+        </div>
+      </div>
+    </div>
   </div>
 
+<h3><a href="mailto:jakub.hrouda@gmail.com">jakub.hrouda@gmail.com</a>, <a href="https://www.instagram.com/kuba.hrouda/">Instagram</a>, <a href="https://www.researchgate.net/profile/Jakub-Hrouda">ResearchGate</a></h3>
+  
   <script>
     function toggleSection(id) {
       const section = document.getElementById(id);
       section.classList.toggle('open');
     }
   </script>
+
+  
 </body>
 </html>
