--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="tile-image"></div>
         <div class="tile-content">
           <h4>ČSO: Havrani v Brně</h4>
-          <p>Upozor</p>
+          <p>Upozorňění na hrozby spojené s plánovanou lanovkou v Brně, jež by ohrozila nocoviště havranů, chráněné druhy a cennou městskou přírodní lokalitu</p>
         </div>
       </div>
     </div>
