--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       <div class="tile">
         <div class="tile-image"></div>
         <div class="tile-content">
-          <h4>Ukázka z koncertu</h4>
-          <p>Krátké video z koncertu v Lucerně.</p>
+          <h4>PřF UK: Východokarpatské rostliny</h4>
+          <p>Rychlé představení zajímavých druhů rostlin rumunského pohoří Parâng</p>
         </div>
       </div>
     </div>
