--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <div class="section" id="reportaze">
     <div class="section-header" onclick="toggleSection('reportaze')">
-      <span>Reportáže</span>
+      <span>Podcasty a reportáže</span>
       <span class="arrow">▼</span>
     </div>
     <div class="tiles">
