--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
     </div>
     <div class="tiles">
       <div class="tile">
-        <div class="tile-image"></div>
+        <div class="tile-image"><img src="tetrev_box.jpg></img></div>
         <div class="tile-content">
-          <h4>Portrét – Jan Novák</h4>
-          <p>Fotografie portrétu z letního focení v Brně.</p>
+          <h4>Tetřevi v Beskydech</h4>
+          <p>Dokumentace reintrodukčního programu tetřeva hlušce v moravskoslezských Beskydech. <a href="https://eu.zonerama.com/KubaHrouda/Album/12090191?secret=fX744a558KKJUy0r8bbf2D3CJ">Všechno foto</a>, <a href="https://lesycr.cz/tiskova-zprava/tetrevi-v-beskydech-lesnici-jich-v-zari-vypustili-do-hor-sestadvacet/">tisková zpráva LČR 2024</a> (<a href="https://lesycr.cz/tiskova-zprava/nove-geny-a-pet-volier-v-beskydske-odchovne-tetreva-hlusce/">2023</a>), <a href="https://ekolist.cz/cz/zpravodajstvi/zpravy/lesnici-vypustili-do-beskydske-prirody-26-tetrevu">ČTK/Ekolist</a>, <a href="https://www.idnes.cz/ostrava/zpravy/tetrev-krasna-hlusec-hnizda-voliery.A250422_849216_ostrava-zpravy_dmk">iDnes</a>.</p>
         </div>
       </div>
     </div>
