--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
   </div>
 
 <h3><a href="mailto:jakub.hrouda@gmail.com">jakub.hrouda@gmail.com</a>, <a href="https://www.instagram.com/kuba.hrouda/">Instagram</a>, <a href="https://www.researchgate.net/profile/Jakub-Hrouda">ResearchGate</a></h3>
+<h3>Naposled upraveno 9.7.2025 21:32</h3>
   
   <script>
     function toggleSection(id) {
