--- a/index.html
+++ b/index.html
@@ -120,13 +120,22 @@
     </div>
     <div class="tiles">
       <div class="tile">
-        <div class="tile-image" style="background-image: url('tetrev-box.jpg'); background-size: cover; background-position: center;"></div>
+        <div class="tile-image" style="background-image: url('tetrev_box.jpg'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
           <h4>Tetřevi v Beskydech</h4>
           <p>Dokumentace reintrodukčního programu tetřeva hlušce v moravskoslezských Beskydech. <a href="https://eu.zonerama.com/KubaHrouda/Album/12090191?secret=fX744a558KKJUy0r8bbf2D3CJ">Všechno foto</a>, <a href="https://lesycr.cz/tiskova-zprava/tetrevi-v-beskydech-lesnici-jich-v-zari-vypustili-do-hor-sestadvacet/">tisková zpráva LČR 2024</a> (<a href="https://lesycr.cz/tiskova-zprava/nove-geny-a-pet-volier-v-beskydske-odchovne-tetreva-hlusce/">2023</a>), <a href="https://ekolist.cz/cz/zpravodajstvi/zpravy/lesnici-vypustili-do-beskydske-prirody-26-tetrevu">ČTK/Ekolist</a>, <a href="https://www.idnes.cz/ostrava/zpravy/tetrev-krasna-hlusec-hnizda-voliery.A250422_849216_ostrava-zpravy_dmk">iDnes</a>.</p>
         </div>
       </div>
     </div>
+    <div class="tiles">
+      <div class="tile">
+        <div class="tile-image" style="background-image: url('blokada_box.jpg'); background-size: cover; background-position: center;"></div>
+        <div class="tile-content">
+          <h4>Revue Prostor: Praha blokuje</h4>
+          <p>Fotoreport blokády PPŽ z mostu Legií. <a href="https://eu.zonerama.com/KubaHrouda/Album/11287518?secret=c9QXm2li1f1A7b02BAV20l55K">Všechno foto</a>, <a href="https://revueprostor.cz/jane-scalabroni-cti-otce-sveho-a-delohu-svou">článek Revue Prostor</a>.</p>
+        </div>
+      </div>
+    </div>    
   </div>
 
   <div class="section" id="reely">
@@ -146,7 +155,7 @@
   
       <div class="tiles">
       <div class="tile">
-        <div class="tile-image"></div>
+        <div class="tile-image" style="background-image: url('snemovna_box.png'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
           <a href="https://www.instagram.com/reel/DKNERdRsVe5/"><h4>ČSO: Sněmovna hlasuje o zákoně 114</h4></a>
           <p>Mobilizační kampaň ornitologické společnosti proti návrhům degradujícím funkci národních parků</p>
@@ -166,7 +175,7 @@
   </div>
 <br>
 <h3><a href="mailto:jakub.hrouda@gmail.com">jakub.hrouda@gmail.com</a>, <a href="https://www.instagram.com/kuba.hrouda/">Instagram</a>, <a href="https://www.researchgate.net/profile/Jakub-Hrouda">ResearchGate</a></h3>
-<h3>Naposled upraveno 10.7.2025 20:22</h3>
+<h3>Naposled upraveno 10.7.2025 20:33</h3>
   
   <script>
     function toggleSection(id) {
