--- a/index.html
+++ b/index.html
@@ -173,9 +173,27 @@
       </div>
     </div>
   </div>
+
+  <div class="section" id="publikace">
+    <div class="section-header" onclick="toggleSection('publikace')">
+      <span>Publikace a texty</span>
+      <span class="arrow">▼</span>
+    </div>
+    <div class="tiles">
+      <div class="tile">
+        <div class="tile-image" style="background-image: url('powerlines_box.jpg'); background-size: cover; background-position: center;"></div>
+        <div class="tile-content">
+          <a href="https://bioone.org/journals/journal-of-vertebrate-biology/volume-70/issue-2/jvb.21027/Birds-in-power-line-corridors--effects-of-vegetation-mowing/10.25225/jvb.21027.full"><h4>Birds in power-line corridors: effects of vegetation mowing on avian diversity and abundance</h4></a>
+          <p>Power line corridors in forested areas positively impact bird communities, increasing both species richness and abundance compared to surrounding forests - partially by supporting open-habitat specialists.</p>
+        </div>
+      </div>
+      <!-- Další dlaždice zde -->
+    </div>
+  </div>
+  
 <br>
 <h3><a href="mailto:jakub.hrouda@gmail.com">jakub.hrouda@gmail.com</a>, <a href="https://www.instagram.com/kuba.hrouda/">Instagram</a>, <a href="https://www.researchgate.net/profile/Jakub-Hrouda">ResearchGate</a></h3>
-<h3>Naposled upraveno 10.7.2025 20:33</h3>
+<h3>Naposled upraveno 11.7.2025 11:19</h3>
   
   <script>
     function toggleSection(id) {
