--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     </div>    
   </div>
 
+hadi_mord_box.png
   <div class="section" id="reely">
     <div class="section-header" onclick="toggleSection('reely')">
       <span>Reely</span>
@@ -145,7 +146,7 @@
     </div>
     <div class="tiles">
       <div class="tile">
-        <div class="tile-image"></div>
+        <div class="tile-image" style="background-image: url('hadi_mord_box.png'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
           <h4>PřF UK: Východokarpatské rostliny</h4>
           <p>Rychlé představení zajímavých druhů rostlin rumunského pohoří Parâng</p>
