--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   </div>
   
 <br>
-<h3><a href="mailto:jakub.hrouda@gmail.com">jakub.hrouda@gmail.com</a>, <a href="https://www.instagram.com/kuba.hrouda/">Instagram</a>, <a href="https://www.researchgate.net/profile/Jakub-Hrouda">ResearchGate</a></h3>
+<h3><a href="mailto:jakub.hrouda@gmail.com">jakub.hrouda@gmail.com</a>, <a href="https://www.instagram.com/kuba.hrouda/">Instagram</a>, <a href="https://bsky.app/profile/kuba-hrouda.bsky.social">Bluesky</a>, <a href="https://www.researchgate.net/profile/Jakub-Hrouda">ResearchGate</a></h3>
 <h3>Naposled upraveno 11.7.2025 13:40</h3>
   
   <script>
