--- a/index.html
+++ b/index.html
@@ -187,13 +187,30 @@
           <p>Power line corridors in forested areas positively impact bird communities, increasing both species richness and abundance compared to surrounding forests - partially by supporting open-habitat specialists.</p>
         </div>
       </div>
-      <!-- Další dlaždice zde -->
+<div class="tiles">
+      <div class="tile">
+        <div class="tile-image" style="background-image: url('SDM_box.jpg'); background-size: cover; background-position: center;"></div>
+        <div class="tile-content">
+          <a href="fledglings_EN_poster_Hrouda_TISK.pdf"><h4>Poster: Seasonal changes in habitat preferences of migratory birds</h4></a>
+          <p>Using species distribution modeling (SDM) to analyze habitat preferences of migratory birds, ultimately working towards a comprehensive algorithm for predicting species occurrence and informing conservation efforts.</p>
+          <p>Presented at EOU Fledglings 2024 and Zoologické dny 2024; awarded the CSO prize for best student ornithological poster</p>
+        </div>
+      <div class="tile">
+        <div class="tile-image" style="background-image: url('urbanizace_box.png'); background-size: cover; background-position: center;"></div>
+        <div class="tile-content">
+          <a href="fledglings_EN_poster_Hrouda_TISK.pdf"><h4>Poster: Ptáci v urbánním prostředí: sezónní změny habitatových preferencí</h4></a>
+          <p>Jsou pro ptáky urbánní oblasti atraktivnější než rurální prostředí? Liší se míra jejich využití v různých ročních obdobích? Porovnání na základě vztahu relativní abundance druhů, míry urbanizace a zeměpisné šířky.</p>
+          <p>Prezentováno na Zoologických dnech 2025</p>
+        </div>
+      </div>
+
+      
     </div>
   </div>
   
 <br>
 <h3><a href="mailto:jakub.hrouda@gmail.com">jakub.hrouda@gmail.com</a>, <a href="https://www.instagram.com/kuba.hrouda/">Instagram</a>, <a href="https://bsky.app/profile/kuba-hrouda.bsky.social">Bluesky</a>, <a href="https://www.researchgate.net/profile/Jakub-Hrouda">ResearchGate</a></h3>
-<h3>Naposled upraveno 11.7.2025 13:40</h3>
+<h3>Naposled upraveno 14.7.2025 09:24</h3>
   
   <script>
     function toggleSection(id) {
