--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
 
       <div class="tile">
-        <div class="tile-image" style="background-image: url('SDM_box.jpg'); background-size: cover; background-position: center;"></div>
+        <div class="tile-image" style="background-image: url('SMD_box.jpg'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
           <a href="fledglings_EN_poster_Hrouda_TISK.pdf"><h4>Poster: Seasonal changes in habitat preferences of migratory birds</h4></a>
           <p>Using species distribution modeling (SDM) to analyze habitat preferences of migratory birds, ultimately working towards a comprehensive algorithm for predicting species occurrence and informing conservation efforts.</p>
@@ -199,7 +199,7 @@
       <div class="tile">
         <div class="tile-image" style="background-image: url('urbanizace_box.png'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
-          <a href="fledglings_EN_poster_Hrouda_TISK.pdf"><h4>Poster: Ptáci v urbánním prostředí: sezónní změny habitatových preferencí</h4></a>
+          <a href="zoodny 2025 ubanni zmeny github.pdf"><h4>Poster: Ptáci v urbánním prostředí: sezónní změny habitatových preferencí</h4></a>
           <p>Jsou pro ptáky urbánní oblasti atraktivnější než rurální prostředí? Liší se míra jejich využití v různých ročních obdobích? Porovnání na základě vztahu relativní abundance druhů, míry urbanizace a zeměpisné šířky.</p>
           <p>Prezentováno na Zoologických dnech 2025</p>
         </div>
