--- a/index.html
+++ b/index.html
@@ -135,7 +135,17 @@
           <p>Fotoreport blokády PPŽ z mostu Legií. <a href="https://eu.zonerama.com/KubaHrouda/Album/11287518?secret=c9QXm2li1f1A7b02BAV20l55K">Všechno foto</a>, <a href="https://revueprostor.cz/jane-scalabroni-cti-otce-sveho-a-delohu-svou">článek Revue Prostor</a>.</p>
         </div>
       </div>
-    </div>    
+    </div> 
+    <div class="tiles">
+      <div class="tile">
+        <div class="tile-image" style="background-image: url('chvilky_box.png'); background-size: cover; background-position: center;"></div>
+        <div class="tile-content">
+          <h4>e15: Milion chvilek</h4>
+          <p>Fotoreport (nejen) z po-kovidových demonstrací Milionu chvilek. <a href="https://www.e15.cz/clanek/archiv/fotoreportaz-prvni-akce-milionu-chvilek-po-konci-nouzoveho-stavu-1370823">Článek e15</a>.</p>
+        </div>
+      </div>
+    </div> 
+    
   </div>
 
   <div class="section" id="reely">
