--- a/index.html
+++ b/index.html
@@ -197,13 +197,19 @@
           <p>Power line corridors in forested areas positively impact bird communities, increasing both species richness and abundance compared to surrounding forests - partially by supporting open-habitat specialists.</p>
         </div>
       </div>
-
       <div class="tile">
         <div class="tile-image" style="background-image: url('SMD_box.jpg'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
           <a href="fledglings_EN_poster_Hrouda_TISK.pdf"><h4>Poster: Seasonal changes in habitat preferences of migratory birds</h4></a>
           <p>Using species distribution modeling (SDM) to analyze habitat preferences of migratory birds, ultimately working towards a comprehensive algorithm for predicting species occurrence and informing conservation efforts.</p>
           <p>Presented at EOU Fledglings 2024 and Zoologické dny 2024; awarded the CSO prize for best student ornithological poster</p>
+        </div>
+       </div>
+      <div class="tile">
+        <div class="tile-image" style="background-image: url('houba_box.png'); background-size: cover; background-position: center;"></div>
+        <div class="tile-content">
+          <a href="myko_esej_klima.pdf"><h4>Esej: Globální klimatické změny – týkají se i hub?</h4></a>
+          <p>Klimatické změny dopadají i na druhy hub s klíčovou ekologickou rolí, což může vést k narušení symbiontských vztahů či zvýšení produkce mykotoxinů ohrožujících potraviny. Některé houby však naopak mohou nabízet řešení klimatických změn.</p>
         </div>
        </div> 
       <div class="tile">
@@ -214,7 +220,6 @@
           <p>Prezentováno na Zoologických dnech 2025</p>
         </div>
       </div>
-
       
     </div>
   </div>
@@ -222,7 +227,7 @@
   
 <br>
 <h3><a href="mailto:jakub.hrouda@gmail.com">jakub.hrouda@gmail.com</a>, <a href="https://www.instagram.com/kuba.hrouda/">Instagram</a>, <a href="https://bsky.app/profile/kuba-hrouda.bsky.social">Bluesky</a>, <a href="https://www.researchgate.net/profile/Jakub-Hrouda">ResearchGate</a></h3>
-<h3>Naposled upraveno 14.7.2025 09:24</h3>
+<h3>Naposled upraveno 17.7.2025 12:20</h3>
   
   <script>
     function toggleSection(id) {
