--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         <div class="tile-image" style="background-image: url('powerlines_box.jpg'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
           <a href="https://bioone.org/journals/journal-of-vertebrate-biology/volume-70/issue-2/jvb.21027/Birds-in-power-line-corridors--effects-of-vegetation-mowing/10.25225/jvb.21027.full"><h4>Birds in power-line corridors: effects of vegetation mowing on avian diversity and abundance</h4></a>
-          <p>Power line corridors in forested areas positively impact bird communities, increasing both species richness and abundance compared to surrounding forests - partially by supporting open-habitat specialists.</p>
+          <p>Paper • Power line corridors in forested areas positively impact bird communities, increasing both species richness and abundance compared to surrounding forests - partially by supporting open-habitat specialists.</p>
         </div>
       </div>
       <div class="tile">
         <div class="tile-image" style="background-image: url('SMD_box.jpg'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
-          <a href="fledglings_EN_poster_Hrouda_TISK.pdf"><h4>Poster: Seasonal changes in habitat preferences of migratory birds</h4></a>
+          <a href="fledglings_EN_poster_Hrouda_TISK.pdf"><h4>Poster • Seasonal changes in habitat preferences of migratory birds</h4></a>
           <p>Using species distribution modeling (SDM) to analyze habitat preferences of migratory birds, ultimately working towards a comprehensive algorithm for predicting species occurrence and informing conservation efforts.</p>
           <p>Presented at EOU Fledglings 2024 and Zoologické dny 2024; awarded the CSO prize for best student ornithological poster</p>
         </div>
@@ -120,14 +120,14 @@
       <div class="tile">
         <div class="tile-image" style="background-image: url('houba_box.png'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
-          <a href="myko_esej_klima.pdf"><h4>Esej: Globální klimatické změny – týkají se i hub?</h4></a>
+          <a href="myko_esej_klima.pdf"><h4>Esej • Globální klimatické změny – týkají se i hub?</h4></a>
           <p>Klimatické změny dopadají i na druhy hub s klíčovou ekologickou rolí, což může vést k narušení symbiontských vztahů či zvýšení produkce mykotoxinů ohrožujících potraviny. Některé houby však naopak mohou nabízet řešení jejich příčin.</p>
         </div>
        </div> 
       <div class="tile">
         <div class="tile-image" style="background-image: url('urbanizace_box.png'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
-          <a href="zoodny 2025 ubanni zmeny github.pdf"><h4>Poster: Ptáci v urbánním prostředí: sezónní změny habitatových preferencí</h4></a>
+          <a href="zoodny 2025 ubanni zmeny github.pdf"><h4>Poster • Ptáci v urbánním prostředí: sezónní změny habitatových preferencí</h4></a>
           <p>Jsou pro ptáky urbánní oblasti atraktivnější než rurální prostředí? Liší se míra jejich využití v různých ročních obdobích? Porovnání na základě vztahu relativní abundance druhů, míry urbanizace a zeměpisné šířky.</p>
           <p>Prezentováno na Zoologických dnech 2025</p>
         </div>
@@ -135,7 +135,7 @@
       <div class="tile">
         <div class="tile-image" style="background-image: url('jespak_box.png'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
-          <a href="ornito_esej_migrace.pdf"><h4>Esej: Anantropogenní změny v ptačí migraci a možnosti jejich sledování</h4></a>
+          <a href="ornito_esej_migrace.pdf"><h4>Esej • Anantropogenní změny v ptačí migraci a možnosti jejich sledování</h4></a>
           <p>Lidská činnost mění ptačí migraci a ohrožuje tak přežití některých druhů ptáků. Jak je možné sledovat jejich pohyb, a získat tak data klíčová pro porozumění dopadům na ekosystémy i pro jejich ochranu?</p>
         </div>
        </div>
