--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       <div class="tile">
         <div class="tile-image" style="background-image: url('powerlines_box.jpg'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
-          <a href="https://bioone.org/journals/journal-of-vertebrate-biology/volume-70/issue-2/jvb.21027/Birds-in-power-line-corridors--effects-of-vegetation-mowing/10.25225/jvb.21027.full"><h4>Birds in power-line corridors: effects of vegetation mowing on avian diversity and abundance</h4></a>
-          <p>Paper • Power line corridors in forested areas positively impact bird communities, increasing both species richness and abundance compared to surrounding forests - partially by supporting open-habitat specialists.</p>
+          <a href="https://bioone.org/journals/journal-of-vertebrate-biology/volume-70/issue-2/jvb.21027/Birds-in-power-line-corridors--effects-of-vegetation-mowing/10.25225/jvb.21027.full"><h4>Paper • Birds in power-line corridors: effects of vegetation mowing on avian diversity and abundance</h4></a>
+          <p>Power line corridors in forested areas positively impact bird communities, increasing both species richness and abundance compared to surrounding forests - partially by supporting open-habitat specialists.</p>
         </div>
       </div>
       <div class="tile">
