--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="tile">
         <div class="tile-image" style="background-image: url('hadi_mord_box.png'); background-size: cover; background-position: center;"></div>
         <div class="tile-content">
-          <h4>PřF UK: Východokarpatské rostliny</h4>
+          <a href="https://drive.google.com/file/d/1dRhCiCyLlNEBeCU0rySNaPRoucHHaV6l/view?usp=sharing"><h4>PřF UK: Východokarpatské rostliny</h4></a>
           <p>Rychlé představení zajímavých druhů rostlin rumunského pohoří Parâng</p>
         </div>
       </div>
